data/diff_tests/wasmtime/call_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3861.wast
;; 10. **Complex Function Signatures in Imported Functions**:     - **Reasoning**: Test handling of complex signatures (e.g., multiple mixed-type parameters and multiple return values) in imported functions.     - **Description**: Define an imported function with a complex signature, call it with an appropriate set of arguments, and check if both WebAssembly and wizard_engine correctly manage parameter passing, result handling, and stack adjustments.

(assert_invalid
  (module
    (import "env" "complexFunction" (func $complexFunction (param i32 f64 i64) (result i64 f32)))
    (func (result i64 f32)
      (call $complexFunction (i32.const 42) (f64.const 3.14) (i64.const 1234567890))
    )
  )
  "type mismatch"
)